# ROS2-Computer-Vision-Tracker

./: README.md
ros2_sphero_mini/: package.xml  setup.cfg  setup.py
ros2_sphero_mini/config/: sphero_conf.json
ros2_sphero_mini/launch/: sphero_mini_launch.xml
ros2_sphero_mini/ros2_sphero_mini/: _constants.py  controller_gui.py  core.py  simple_moves.py  sphero_node.py  tracker_node.py
