<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_sphero_mini</name>
  <version>0.0.0</version>
  <description>This package uses a sphero mini driver to communicate over BLE, while featuring a variety of functionalities using OpenCV, ROS2, and Python.</description>
  <maintainer email="siwonryu1425@gmail.com">siwon-ryu</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <build_depend>python3-opencv</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
